--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-dash==2.0.0
+dash==2.1.0
 Flask==2.0.2
 pandas==1.3.5
 plotly==5.1.0
 gunicorn==20.1.0
 tensorflow-cpu==2.8.0
+dash-bootstrap-components==1.0.3
+openpyxl==3.0.9
